tests/invalid/undef_impl_def_literal.err_exp
undef_impl_def_literal.m:015: In clause for predicate `main'/2:
undef_impl_def_literal.m:015:   in argument 1 of call to predicate
undef_impl_def_literal.m:015:   `io.write'/3:
undef_impl_def_literal.m:015:   error: undefined symbol `$nosuchthing'.
